# auto_collect_test

./: .gitignore  AutoCollect.spec  BROWSER_FIX_GUIDE.md  CROSS_PLATFORM_BUILD.md  GITHUB_ACTIONS_GUIDE.md  PACKAGING_GUIDE.md  README.md  STARTUP_ISSUE_DIAGNOSIS.md  build.py  build_windows.bat  build_windows_simple.py  cross_platform_build.py  entry_point.py  launch_fixed.py  pyproject.toml  release.py  requirements.txt  setup_cross_platform.py  storage_state.json  telegram_links.db  test_fixes.py  test_ui.py
.github/workflows/: build.yml  release.yml
auto_collect/: __init__.py  main.py  playwright_login.py  results.db  telegram_links.db
auto_collect/crawler/: DatabaseManager.py  TwitterAPIClient.py  layer1_requests.py  layer2_playwright.py  layer3_selenium.py  manager.py  storage.py
auto_collect/ui/: main_window.py
