[project]
name = "auto-collect"
version = "0.1.0"
description = "X/T.me数据采集工具"
authors = [
    {name = "zhaoJinPeng",email = "zhaojinpeng@profitgrp.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
    "playwright>=1.49.0",
    "pyqt6>=6.7.0",
    "tweepy>=4.14.0",
    "selenium>=4.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.32.0"
beautifulsoup4 = "^4.12.0"
tqdm = "^4.66.0"
playwright = "^1.49.0"
pyqt6 = "^6.7.0"
tweepy = "^4.14.0"
selenium = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.0.0"
auto-py-to-exe = "^2.40.0"

[tool.poetry.scripts]
auto-collect = "auto_collect.main:main"
